Changelog
=========

1.7 (unreleased)
----------------

- Nothing changed yet.


1.6 (2013-01-29)
----------------

- added travs-ci configuration [gborelli]
- refactored tests with plone.app.testing [gborelli]
- removed tests.base module [gborelli]
- removed imports from zope.app [gborelli]
- Changed control panel form in order to make it more user friendly [gborelli]
- Fixed translation domain in the collectivegeo_macros [rnd0101]
- Allowed OSM and overlay URL helper functions to take into account
  zoomOffset.
  [davidjb]
- Ensuring that the maxExtent for spherical mercator covers all coordinates.
  [davidjb]
- Automatically include OpenLayers language files if the language is
  supported by OpenLayers [href]
- Added German translation [href]
- Changed javascript to indicate map loading through the custom 'map-load' event,
  ensuring that invisible maps on tabbed forms are loaded only when made visible.
  Javascript code relying on collectivegeo.js must now implement
  $(window).bind('map-load', function(e, map) { }); which will be called once
  the map is ready. [href]
- Disabled OpenLayer's KeyboardDefaults since they lead to the complete consumption
  of all + / - and arrow-key presses in input fields. [href]

1.5 (2012-02-11)
----------------

- Added French translation [Fabien Moret]
- Added ability to hit enter key within geocoder input and search. Previously,
  hitting enter submitted the parent form.
  [davidjb]
- Fix minor typo on geocoder error div
  [davidjb]
- Replace deprecated usage of ``jq`` with ``$`` (using ``jQuery`` function)
  [davidjb]
- Allow mapwidget to utilise HTTPS mapping resources, where possible, to
  attempt to avoid issues of loading insecure resources like map tiles. Only
  Google and Bing support HTTPS for their APIs at present - Yahoo and OSM do
  not. To avoid security errors, avoid the use of the latter two map APIs
  when on HTTPS.
  [davidjb]
- Provide request protocol to layer templates
  [davidjb]