@@ -4,7 +4,8 @@ Changelog
 1.7 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Added ShapeMapWidget and ShapeEditLayer and theirs respective adapters
+  [gborelli]
 
 
 1.6 (2013-01-29)
